hoan thien responsive

--- a/home-w3-band.html
+++ b/home-w3-band.html
@@ -66,15 +66,15 @@
                     <p class="section-sub-heading">We love music</p>
                     <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <div class="member-band row text-center">
-                        <div class="mobile-member col col-3">
+                        <div class="s-col-full col col-3 mt-16">
                             <p class="member-name">Name</p>
                             <img src="./assets/imgs/member_band/bandmember.jpg" alt="name" class="member-img">
                         </div>
-                        <div class="mobile-member col col-3">
+                        <div class="s-col-full col col-3 mt-16">
                             <p class="member-name">Name</p>
                             <img src="./assets/imgs/member_band/bandmember.jpg" alt="name" class="member-img">
                         </div>
-                        <div class="mobile-member col col-3">
+                        <div class="s-col-full col col-3 mt-16">
                             <p class="member-name">Name</p>
                             <img src="./assets/imgs/member_band/bandmember.jpg" alt="name" class="member-img">
                         </div>
@@ -100,7 +100,7 @@
                        <!--Begin Places-->
 
                        <div class="places-list row">
-                           <div class="mobile-places-list col col-3">
+                           <div class="s-col-full col col-3 mt-16">
                                <img src="./assets/imgs/place-tickets/place1.jpg" alt="New York" class="place-img"/>
                                <div class="place-content">
                                    <h3 class="place-heading">New York</h3>
@@ -109,7 +109,7 @@
                                    <button type="button" class="js-by-ticket btn">By Tickets</button>
                                </div>
                            </div>
-                           <div class="mobile-places-list col col-3">
+                           <div class="s-col-full col col-3 mt-16">
                                <img src="./assets/imgs/place-tickets/place2.jpg" alt="New York" class="place-img"/>
                                <div class="place-content">
                                    <h3 class="place-heading">Paris</h3>
@@ -118,7 +118,7 @@
                                    <button type="button" class="js-by-ticket btn">By Tickets</button>
                                </div>
                            </div>
-                           <div class="mobile-places-list col col-3">
+                           <div class="s-col-full col col-3 mt-16">
                                <img src="./assets/imgs/place-tickets/place3.jpg" alt="New York" class="place-img"/>
                                <div class="place-content">
                                    <h3 class="place-heading">San Francisco</h3>
@@ -139,24 +139,24 @@
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
                     <div class="row contact-content">
-                        <div class="mobile-contact col col-2 contact-info">
+                        <div class="s-col-full col col-2 contact-info">
                             <p><i class="fa-solid fa-location-dot"></i> Chicago, US</p>
                             <p><i class="fa-solid fa-phone"></i> Phone: +00 151515</p>
                             <p><i class="fa-solid fa-envelope"></i> Email: mail@mail.com</p>
                         </div>
-                        <div class="mobile-contact col col-2 contact-form">
+                        <div class="s-col-full col col-2 contact-form">
                             <form action="#" method="post">
                                 <div class="row">
-                                    <div class="mobile-form col col-2">
-                                        <input type="text" name="Name"  placeholder="Name" class="form-control" required>
+                                    <div class="s-col-full col col-2">
+                                        <input type="text" name="Name"  placeholder="Name" class="form-control mt-8" required>
                                     </div>
-                                    <div class="mobile-form col col-2">
-                                        <input type="email" name="email" placeholder="Email" class="form-control" required>
+                                    <div class="s-col-full col col-2">
+                                        <input type="email" name="email" placeholder="Email" class="form-control mt-8" required>
                                     </div>
                                 </div>
                                 <div class="row mt-8">
-                                    <div class="mobile-form col col-full">
-                                    <input type="text" name="message" placeholder="Message" class="form-control" required>
+                                    <div class="s-col-full col col-full">
+                                    <input type="text" name="message" placeholder="Message" class="form-control mt-8" required>
                                 </div>
                                 </div>
                                 <button type="submit" class="pull-right mt-16 btn">Send</button>
